RESOLVED FIXED186078
Fix the build
https://bugs.webkit.org/show_bug.cgi?id=186078
Summary Fix the build
Tim Horton
Reported 2018-05-29 19:52:10 PDT
Fix the build
Attachments
Patch (2.10 KB, patch)
2018-05-29 19:53 PDT, Tim Horton
no flags
Patch (2.16 KB, patch)
2018-05-29 19:56 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2018-05-29 19:53:26 PDT
WebKit Commit Bot
Comment 2 2018-05-29 19:55:22 PDT
Comment on attachment 341549 [details] Patch Rejecting attachment 341549 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 341549, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WTF/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.webkit.org/results/7859578
Tim Horton
Comment 3 2018-05-29 19:56:55 PDT
WebKit Commit Bot
Comment 4 2018-05-29 20:36:41 PDT
Comment on attachment 341550 [details] Patch Clearing flags on attachment: 341550 Committed r232284: <https://trac.webkit.org/changeset/232284>
WebKit Commit Bot
Comment 5 2018-05-29 20:36:42 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-05-29 20:37:18 PDT
Note You need to log in before you can comment on or make changes to this bug.