Fix the build https://bugs.webkit.org/show_bug.cgi?id=186078

Unreviewed build fix.


Source/WebKit:

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _denyNextUserMediaRequest]):

Source/WTF:

* wtf/Platform.h:


Canonical link: https://commits.webkit.org/201508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232284 268f45cc-cd09-0410-ab3c-d52691b4dbfc